--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,7 +11,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Shop Login</title>
+  <title>Shop Register</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -25,7 +26,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Shop Login</a>
+      <a class="navbar-brand" href="#">Register Page</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,7 +43,7 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Login
+            <a class="nav-link" href="/login">Login
 			  <span class="sr-only">(current)</span>
 			</a>
           </li>
@@ -51,36 +52,17 @@
     </div>
   </nav>
 
+
   <!-- Page Content -->
 <div class="row">
     <div class="col-lg-4 col-md-6 mb-4">
             <article class="card-body">
-                <a href="" class="float-right btn btn-outline-primary">Sign up</a>
-                <h4 class="card-title mb-4 mt-1">Sign in</h4>
-                <form>
-                    <div class="form-group">
-                        <label>Your email</label>
-                        <input name="" class="form-control" placeholder="Email" type="email">
-                    </div>
-                    <!-- form-group// -->
-                    <div class="form-group">
-                        <a class="float-right" href="#">Forgot?</a>
-                        <label>Your password</label>
-                        <input class="form-control" placeholder="******" type="password">
-                    </div>
-                    <!-- form-group// -->
-                    <div class="form-group">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Save password </label>
-                        </div>
-                        <!-- checkbox .// -->
-                    </div>
-                    <!-- form-group// -->
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block"> Login </button>
-                    </div>
-                    <!-- form-group// -->
+                <a href="/login" class="float-right btn btn-outline-primary">Login</a>
+                <h4 class="card-title mb-4 mt-1">Register</h4>
+                <form method="POST", class="form-group">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button type="submit" class="btn btn-primary btn-block"> Register </button>
                 </form>
             </article>
 
@@ -92,7 +74,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Online Shop 2019</p>
     </div>
     <!-- /.container -->
   </footer>
