--- a/static/css/shop-homepage.css
+++ b/static/css/shop-homepage.css
@@ -6,3 +6,10 @@
 body {
   padding-top: 56px;
 }
+footer {
+    width:100%;
+    height:80px;
+    position:absolute;
+    bottom:0;
+    left:0;
+}
