--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -68,9 +68,9 @@
   <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="py-4 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Online Shop 2019</p>
+      <p class="text-center text-white">Copyright &copy; Online Shop 2019</p>
     </div>
     <!-- /.container -->
   </footer>
