--- a/static/css/shop-homepage.css
+++ b/static/css/shop-homepage.css
@@ -8,8 +8,9 @@ body {
 }
 footer {
     width:100%;
-    height:80px;
-    position:absolute;
-    bottom:0;
-    left:0;
+    height: 100%;
+    height:30px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
 }
