--- a/static/css/shop-homepage.css
+++ b/static/css/shop-homepage.css
@@ -7,10 +7,11 @@ body {
   padding-top: 56px;
 }
 footer {
-    width:100%;
-    height: 100%;
-    height:30px;
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    clear: both;
+    position: relative;
+    height: 200px;
+    margin-top: -200px;
+}
+.embed-responsive .card-img-top {
+    object-fit: cover;
 }
