--- a/static/css/shop-loginpage.css
+++ b/static/css/shop-loginpage.css
@@ -7,11 +7,10 @@ body {
   padding-top: 56px;
 }
 footer {
-    width:100%;
-    height:30px;
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    clear: both;
+    position: relative;
+    height: 200px;
+    margin-top: -200px;
 }
 .row {
     height: 100%;
