--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -3,23 +3,23 @@
 {% load crispy_forms_tags %}
 
 {% block css %}
-    <link href="{% static 'css/shop-loginpage.css' %}" rel="stylesheet">
+    <link href="{% static 'css/login.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
             <article class="card-body">
                 <a href="/login" class="float-right btn btn-outline-primary">Login</a>
                 <h4 class="card-title mb-4 mt-1">Register</h4>
-                <form method="POST", class="form-group">
+                <form method="POST" , class="form-group">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="submit" class="btn btn-primary btn-block"> Register </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Register</button>
                 </form>
             </article>
 
-        <!-- card.// -->
-	</div>
-</div>
+            <!-- card.// -->
+        </div>
+    </div>
 {% endblock %}
