--- a/shop/templates/profile.html
+++ b/shop/templates/profile.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block css %}
-    <link href="{% static 'css/shop-homepage.css' %}" rel="stylesheet">
+    <link href="{% static 'css/homepage.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-  {% if user.is_authenticated %}
-  {% else %}
-    <meta http-equiv="Refresh" content="0; url=login/" />
-  {% endif %}
+    {% if user.is_authenticated %}
+    {% else %}
+        <meta http-equiv="Refresh" content="0; url=login/"/>
+    {% endif %}
 {% endblock %}
