--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -2,101 +2,128 @@
 {% load static %}
 
 {% block css %}
-    <link href="{% static 'css/shop-homepage.css' %}" rel="stylesheet">
+    <link href="{% static 'css/homepage.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
- <!-- Page Content -->
-  {% if error_message %}
-     <div class="alert">
-      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-      {{ error_message }}
-    </div>
-  {% endif %}
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-3">
-        <h1 class="my-4">Shop Name</h1>
-        <div class="list-group">
-          <a href="/categories/all" class="list-group-item {{ categories_all_active }}">All</a>
-          {% if categories %}
-            {% for category in categories %}
-              <a href="/categories/{{ category.id }}" class="list-group-item">{{ category.name }}</a>
-            {% endfor %}
-          {% endif %}
-        </div>
+    <!-- Page Content -->
 
-      </div>
-      <!-- /.col-lg-3 -->
-
-      <div class="col-lg-9">
-
-        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            {% if products %}
-              {% for product in products %}
-                
-              {% endfor %}
-            {% endif %}
-            <div class="carousel-item active">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+    <div class="container">
+        {% if error_message %}
+            <div class="alert alert-danger" role="alert">
+                {{ error_message }}
             </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+        {% elif info_message %}
+            <div class="alert alert-success" role="alert">
+                {{ info_message }}
             </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-
+        {% endif %}
         <div class="row">
-          {% if products %}
-            {% for product in products %}
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                  <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">{{ product.name }}</a>
-                    </h4>
-                    <h6>${{ product.price }} , {{ product.quantity }} in stock</h6>
-                    <p class="card-text">{{ product.description }}</p>
-                    {% if user.is_authenticated %}
-                      <a href="/add_to_cart/{{ product.id }}/1">
-                        <button type="submit" class="btn btn-primary btn-sm"> ADD TO CART </button>
-                      </a>
+            <div class="col-lg-3">
+                <h1 class="my-4">Y-KOM</h1>
+                {% if user.is_authenticated %}
+                    <h4 class="my-4">Your balance: {{ user.profile.balance }}$</h4>
+                {% endif %}
+                <div class="list-group">
+                    <a href="/categories/all" class="list-group-item {{ categories_all_active }}">All</a>
+                    {% if categories %}
+                        {% for category in categories %}
+                            {% if category.id == active_category %}
+                                <a href="/categories/{{ category.id }}"
+                                   class="list-group-item active">{{ category.name }}</a>
+                            {% else %}
+                                <a href="/categories/{{ category.id }}" class="list-group-item">{{ category.name }}</a>
+                            {% endif %}
+                        {% endfor %}
                     {% endif %}
-                  </div>
-                  <div class="card-footer">
-                    <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-                  </div>
                 </div>
-               </div>
-            {% endfor %}
-          {% endif %}
+
+            </div>
+            <!-- /.col-lg-3 -->
+
+            <div class="col-lg-9">
+
+                <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                            </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+                <div class="row">
+                    {% if products %}
+                        {% for product in products %}
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="card h-100">
+                                    <a href="#"><img class="card-img-top img-fluid" src="/media/{{ product.image }}"
+                                                     onerror="this.onerror=null; this.src='http://placehold.it/700x400'"
+                                                     alt=""></a>
+                                    <div class="card-body">
+                                        <h4 class="card-title">
+                                            <a href="#">{{ product.name }}</a>
+                                        </h4>
+                                        <h6>${{ product.price }} , {{ product.quantity }} in stock</h6>
+                                        <p class="card-text">{{ product.description }}</p>
+                                    </div>
+                                    {% if user.is_authenticated %}
+                                        <div class="input-group">
+                                            <input type="number" id="{{ product.id }}" class="form-control" value="1">
+                                            <span class="input-group-btn">
+
+                               <button type="submit" onclick="addItem({{ product.id }})" class="btn btn-primary"> ADD TO CART </button>
+
+                           </span>
+                                        </div>
+                                    {% endif %}
+
+                                    <div class="card-footer">
+                                        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+                <!-- /.row -->
+
+            </div>
+            <!-- /.col-lg-9 -->
+
         </div>
         <!-- /.row -->
-
-      </div>
-      <!-- /.col-lg-9 -->
-
+        {% if user.is_authenticated %}
+            <div id="checkout">
+                <h4>Go to cart</h4>
+                <a href="/checkout">
+                    <img src="/media/images/checkout.png" class="ribbon" width="100" height="100"/>
+                </a>
+            </div>
+        {% endif %}
     </div>
-    <!-- /.row -->
-
-  </div>
-  <!-- /.container -->
+    <!-- /.container -->
+    <script>
+        function addItem(id) {
+            window.location.replace("/add_to_cart/" + id + "/" + document.getElementById(id).value);
+        }
+    </script>
 {% endblock %}
