--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -80,7 +80,7 @@
                                                      alt=""></a>
                                     <div class="card-body">
                                         <h4 class="card-title">
-                                            <a href="#">{{ product.name }}</a>
+                                            <a href="/id/{{ product.id }}">{{ product.name }}</a>
                                         </h4>
                                         <h6>${{ product.price }} , {{ product.quantity }} in stock</h6>
                                         <p class="card-text">{{ product.description }}</p>
