product page format

--- a/shop/templates/product.html
+++ b/shop/templates/product.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block css %}
-    <link href="{% static 'css/homepage.css' %}" rel="stylesheet">
+    <link href="{% static 'css/productpage.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
