--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="nav-item {{ about_active }}">
-                    <a class="nav-link" href="/">About</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item {{ contact_active }}">
                     <a class="nav-link" href="/">Contact</a>
@@ -61,13 +61,13 @@
 </nav>
 
 <!-- Page Content -->
-<div class="container" >
-<div class="card border-0 shadow-lg p-4 mb-5 bg-light rounded ">
-<div class="card-body p-2">
-    {% block content %}
-    {% endblock %}
-</div>
-</div>
+<div class="container">
+    <div class="card border-0 shadow-lg p-4 mb-5 bg-light rounded ">
+        <div class="card-body p-2">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
 </div>
 <!-- /.container -->
 
