--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -50,15 +50,19 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     </ol>
                     <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active">
-                                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-                            </div>
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="/media/static/karuzela1.png"
+                                 onclick="window.location='/categories/3';" alt="First slide">
+                        </div>
+
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="/media/static/karuzela2.png"
+                                 onclick="window.location='/profile';" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="/media/static/karuzela3.png"
+                                 onclick="window.location='/about';" alt="Third slide">
+                        </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -89,7 +93,8 @@
                                         <div class="input-group">
                                             <input type="number" id="{{ product.id }}" class="form-control" value="1">
                                             <span class="input-group-btn">
-                                               <button type="submit" onclick="addItem({{ product.id }})" class="btn btn-primary"> ADD TO CART </button>
+                                               <button type="submit" onclick="addItem({{ product.id }})"
+                                                       class="btn btn-primary"> ADD TO CART </button>
                                            </span>
                                         </div>
                                     {% endif %}
