--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -6,7 +6,7 @@
 body,html {
   padding-top: 56px;
   height: 100%;
-  background: url('https://i.ytimg.com/vi/-MKapbz0GIo/maxresdefault.jpg') no-repeat center center fixed;
+  background: url('https://www.itl.cat/pngfile/big/157-1572191_hd-wallpapers-for-website-background-cool-background-image.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -18,6 +18,7 @@ body,html {
 footer {
     width:100%;
     height:30px;
+    position: fixed;
     left: 0;
     bottom: 0;
 }
