--- a/shop/templates/checkout.html
+++ b/shop/templates/checkout.html
@@ -23,10 +23,10 @@
             {% for product_in_cart in user.profile.shopping_cart.all %}
                 <p><a href="/remove/{{ product_in_cart.product.id }}" class="btn btn-danger btn-sm">
                     X </a><b>&ensp;{{ product_in_cart.product.name }}&ensp;</b>(x{{ product_in_cart.product_count }})<span
-                        class="price">{{ product_in_cart.product.price }}$</span></p>
+                        class="price">{{ product_in_cart.product.price }} PLN</span></p>
             {% endfor %}
             <hr>
-            <h4><b>Total</b> <span class="price" style="color:black"><b>${{ total_price }}</b></span></h4>
+            <h4><b>Total</b> <span class="price" style="color:black"><b>PLN {{ total_price }}</b></span></h4>
             <a href="/buy" class="btn btn-success"> BUY </a>
             <a href="/remove/all" class="btn btn-dark"> CLEAR </a>
         </div>
