--- a/shop/templates/product.html
+++ b/shop/templates/product.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="card text-center">
         <div class="card-header">
-            {{ product.price }}$ / {{ product.quantity }} in stock
+            {{ product.price }} PLN / {{ product.quantity }} in stock
         </div>
         <div class="card-body">
             <h5 class="card-title">{{ product.name }}</h5>
