--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item {{ contact_active }}">
-                    <a class="nav-link" href="/">Contact</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item {{ profile_active }}">
