--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -14,6 +14,14 @@ body, html {
     margin-top: 20px;
 }
 
+.spacing {
+    padding-bottom: 36px;
+}
+
+.spacing2 {
+    padding-bottom: 16px;
+}
+
 footer {
     width: 100%;
     height: 30px;
